Coleção de Deveres de Casa

--- a/Exercicios.ipynb
+++ b/Exercicios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exercicios",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNOQKFFhxlzWEilphLKtKk"
+      "authorship_tag": "ABX9TyN7qN+NiFGGsftkIbbtAmH8"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "BDIaKXhrO_vE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bPZEbBDBOw9t",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Dever de Casa!\n",
+        "\n",
+        "\n",
+        "defina a função TabuadaMultiplicativa usando o exemplo TabuadaExponencial, \n",
+        "\n",
+        "e gere a tabuada de multiplicação dos números 2, 5 e 9 e faça seus gráficos. \n",
+        "\n",
+        "qual diferença vc vê entre eles? qual é a explicação para essa diferença? \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X0mi5FYuxX8D",
         "colab_type": "code",
         "colab": {}
       },
@@ -33,23 +63,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bPZEbBDBOw9t",
-        "colab_type": "text"
-      },
-      "source": [
-        "#Dever de Casa!\n",
-        "\n",
-        "\n",
-        "defina a função TabuadaMultiplicativa, \n",
-        "\n",
-        "e gere a tabuada de multiplicação dos números 2, 5 e 9 e faça seus gráficos. \n",
-        "\n",
-        "qual diferença vc vê entre eles? qual é a explicação para essa diferença? \n"
-      ]
     },
     {
       "cell_type": "code",
